[package]
name = "camaleon"
version = "0.1.0"
edition = "2021"
description = "Cybernetic Adaptive Morphing Agent for Layered Environment Observation & Neutralization"
authors = ["CAMALEON Team"]
repository = "https://github.com/servais1983/CAMALEON"
license = "MIT"

[workspace]
members = [
    "chame_core",
    "skinshift",
    "eye360",
    "nettongue",
    "lurefield",
    "pigment_api",
    "posture_engine",
    "cli"
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.13"
thiserror = "1.0"
chrono = "0.4"
colored = "2.0"
indicatif = "0.17"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
