[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Interface en ligne de commande pour CAMALEON"
authors = ["CAMALEON Team"]
repository = "https://github.com/servais1983/CAMALEON"
license = "MIT"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0" }
tracing = { workspace = true }
thiserror = { workspace = true }
chame_core = { path = "../chame_core" }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
chrono = "0.4"
config = "0.13"
toml = "0.8"
