[package]
name = "formats"
version = "0.1.0"
edition = "2021"
description = "Support multi-formats pour l'analyse de fichiers dans CAMALEON"
authors = ["CAMALEON Team"]
repository = "https://github.com/servais1983/CAMALEON"
license = "MIT"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0" }
tracing = { workspace = true }
thiserror = { workspace = true }
chame_core = { path = "../chame_core" }
async-trait = "0.1"
chrono = "0.4"
csv = "1.2"
regex = "1.10"
lazy_static = "1.4"
