[package]
name = "lurefield"
version = "0.1.0"
edition = "2021"
description = "Micro-honeypots adaptatifs pour CAMALEON"
authors = ["CAMALEON Team"]
repository = "https://github.com/servais1983/CAMALEON"
license = "MIT"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0" }
tracing = { workspace = true }
thiserror = { workspace = true }
chame_core = { path = "../chame_core" }
async-trait = "0.1"
chrono = "0.4"
rand = "0.8"
dashmap = "5.5"
tempfile = "3.8"
handlebars = "4.3"
