[package]
name = "nettongue"
version = "0.1.0"
edition = "2021"
description = "Network detection capabilities for CAMALEON"
authors = ["CAMALEON Team"]
repository = "https://github.com/servais1983/CAMALEON"
license = "MIT"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0" }
tracing = { workspace = true }
thiserror = { workspace = true }
chame_core = { path = "../chame_core" }
async-trait = "0.1"
chrono = "0.4"
pcap = "1.1"
pnet = "0.34"
rand = "0.8"
dashmap = "5.5"
