[package]
name = "skinshift"
version = "0.1.0"
edition = "2021"
description = "OS fingerprint and banner morphing for CAMALEON"
authors = ["CAMALEON Team"]
repository = "https://github.com/servais1983/CAMALEON"
license = "MIT"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0" }
tracing = { workspace = true }
thiserror = { workspace = true }
chame_core = { path = "../chame_core" }
async-trait = "0.1"
toml = "0.8"
chrono = "0.4"
rand = "0.8"
regex = "1.10"
nix = "0.28"
libc = "0.2"
